--- a/storyteller_lib/prompts/templates/languages/german/synthesize_scene_instructions.jinja2
+++ b/storyteller_lib/prompts/templates/languages/german/synthesize_scene_instructions.jinja2
@@ -107,16 +107,10 @@ SCHAUPLATZ:
 {% endif %}
 
 {% if world_elements %}
-WELTKONTEXT:
-{% for category, elements in world_elements.items() %}
-{% if elements %}
+RELEVANTE WELTENBAU-ELEMENTE:
+{% for element in world_elements %}
+{{ element }}
 
-{{ category|upper|replace('_', ' ')|replace('TECHNOLOGY MAGIC', 'TECHNOLOGIE/MAGIE')|replace('DAILY LIFE', 'ALLTAG') }}:
-{% for key, data in elements.items() %}
-- {{ key|title|replace('_', ' ') }}: {{ data.content if data is mapping else data|truncate(200) }}
-  {%- if data is mapping and data.integration %} ({{ data.integration }}){% endif %}
-{% endfor %}
-{% endif %}
 {% endfor %}
 {% endif %}
 
