--- a/storyteller_lib/prompts/templates/languages/german/chapter_extraction.jinja2
+++ b/storyteller_lib/prompts/templates/languages/german/chapter_extraction.jinja2
@@ -9,6 +9,7 @@ Für jedes Kapitel bitte angeben:
 3. Eine detaillierte Gliederung (200-300 Wörter)
 4. Für jede der 3-5 Schlüsselszenen angeben:
    - Beschreibung: Die detaillierte Zusammenfassung in 3-5 Sätzen, was in dieser Szene passiert
+   - Ort: Der primäre Ort, an dem die Szene stattfindet
    - Handlungsfortschritte: Liste spezifischer Handlungspunkte, die enthüllt/vorangebracht werden
    - Charakter lernt: Liste von "Charaktername: was er/sie lernt"
    - Erforderliche Charaktere: Liste der Charaktere, die auftreten müssen
