--- a/storyteller_lib/prompts/templates/languages/german/chapter_planning.jinja2
+++ b/storyteller_lib/prompts/templates/languages/german/chapter_planning.jinja2
@@ -22,6 +22,7 @@ Liefere für jedes Kapitel:
 4. WICHTIG: Erstelle 3-6 Schlüsselszenen pro Kapitel (NIEMALS weniger als 3, strebe 4-5 für gutes Tempo an). Für jede Szene, spezifiziere:
    - Detaillierte Zusammenfassung: Eine umfassende Zusammenfassung in 3-5 Sätzen, die NUR das beschreibt, was in DIESER spezifischen Szene passiert. Machen Sie die Szenengrenzen sehr deutlich - was die Szene beginnt, was während ihr geschieht und wo sie endet. Schließen Sie KEINE Ereignisse aus anderen Szenen ein
    - Szenentyp: Wähle aus (Aktion, Dialog, Erkundung, Enthüllung, Charaktermoment, Übergang, Konflikt, Auflösung)
+   - Ort: Wo diese Szene stattfindet (kann allgemein wie "Eine Kirche" oder spezifisch wie "Der Chorübungsraum der Hauptkathedrale" sein - Details können später verfeinert werden)
    - Handlungsfortschritte: Welche wichtigen Handlungspunkte werden enthüllt/vorangetrieben
    - Figur lernt: Liste was Figuren lernen, formatiert als "Figurname: was sie lernen"
    - Erforderliche Figuren: Welche Figuren MÜSSEN auftreten
