--- a/storyteller_lib/prompts/templates/languages/german/scene_reflection.jinja2
+++ b/storyteller_lib/prompts/templates/languages/german/scene_reflection.jinja2
@@ -47,6 +47,24 @@ ANALYSEKRITERIEN:
    - Sind Beschreibungen lebendig ohne überschrieben zu sein?
    - Ist der Stil konsistent mit der Geschichte?
 
+8. METAPHERNZURÜCKHALTUNG (Bewertung 1-10):
+   - Zähle alle Metaphern/Vergleiche in der Szene (Ziel: maximal 1-2)
+   - Sind Metaphern für Schlüsselmomente reserviert?
+   - Ist die Bildsprache konkret statt abstrakt?
+   - Notiere jegliche schwülstige oder überschriebene Passagen
+
+9. POV-KONSISTENZ (Bewertung 1-10):
+   - Wird die POV-Figur im ersten Absatz etabliert?
+   - Gibt es Kopf-Hüpfen oder POV-Verletzungen?
+   - Sind alle Beschreibungen durch die POV-Figur gefiltert?
+   - Weiß der Erzähler nur, was die POV-Figur weiß?
+
+10. BESCHREIBUNGSÖKONOMIE (Bewertung 1-10):
+    - Wie ist das Verhältnis Aktion/Dialog zu Beschreibung? (Ziel: 70/30)
+    - Treibt jede Beschreibung die Handlung voran oder enthüllt Charaktere?
+    - Gibt es überflüssige beschreibende Passagen?
+    - Könnte die Szene gestrafft werden ohne Bedeutung zu verlieren?
+
 DEUTSCHE ERZÄHLSTANDARDS:
 - Berücksichtige deutsche Literaturtraditionen
 - Bewerte kulturelle Authentizität
