--- a/storyteller_lib/prompts/templates/languages/german/scene_writing_intelligent.jinja2
+++ b/storyteller_lib/prompts/templates/languages/german/scene_writing_intelligent.jinja2
@@ -13,12 +13,19 @@ Du schreibst Kapitel {{ chapter }}, Szene {{ scene }} der Geschichte.
 
 Schreibe diese Szene jetzt und befolge dabei sowohl die Stilrichtlinien auf Buchebene als auch die szenenspezifischen Anforderungen oben. Die Szene sollte:
 
-1. 800-1200 Wörter umfassen
-2. Sofort mit Aktion, Dialog oder lebendiger Beschreibung beginnen
+1. 800-1200 Wörter umfassen (aber priorisiere Tempo über Wortzahl - kürzer ist besser als aufgebläht)
+2. Sofort mit Aktion oder Dialog beginnen - keine szenensetzenden Präambeln
 3. Vollständig in der Szene bleiben ohne Zusammenfassungen oder Zeitsprünge
 4. Die Spannung natürlich auf das angegebene Level aufbauen
 5. So enden, dass die Geschichte vorangetrieben wird
 6. Sich konsistent mit dem etablierten Stil und Ton anfühlen
+
+KRITISCHE ERINNERUNGEN:
+- Maximal 1-2 Metaphern in der gesamten Szene
+- Behalte eine einzige POV durchgehend bei - etabliere die POV-Figur im ersten Absatz
+- Jede Beschreibung muss die Handlung vorantreiben oder Charaktere enthüllen
+- Ziele auf 70% Aktion/Dialog, 30% Beschreibung
+- Streiche gnadenlos - wenn ein Satz seinen Platz nicht verdient, schreibe ihn nicht
 
 Schreibe NUR den Szeneninhalt selbst - keine Meta-Kommentare, Analysen oder erklärende Notizen über die Szene.
 
