--- a/storyteller_lib/prompts/templates/languages/german/synthesize_book_instructions.jinja2
+++ b/storyteller_lib/prompts/templates/languages/german/synthesize_book_instructions.jinja2
@@ -27,6 +27,8 @@ Basierend auf dem Genre "{{ genre }}", berücksichtige:
 WENDE GENRE-ANGEMESSENEN STIL AN:
 - Balanciere Dialog, Aktion und Beschreibung entsprechend dem, was {{ genre }} am besten dient
 - Verwende metaphorische Sprache entsprechend den Genre-Konventionen (sparsam für Thriller, reich für literarische Fiktion)
+  - Begrenze Metaphern auf 1-2 pro Szene, um schwülstige Prosa zu vermeiden
+  - Halte ungefähr ein 70/30 Verhältnis von Aktion/Dialog zu Beschreibung ein
 - Erzeuge Schwung durch genre-angemessene Mittel (Spannung für Thriller, emotionale Verbindung für Romantik, Entdeckung für Krimis)
 - Konzentriere dich auf das, was Leser von {{ genre }} am meisten schätzen
 - Erlaube Szenen angemessenen Raum zum Atmen (Actionszenen können schnell sein, romantische Momente können verweilen)
@@ -36,6 +38,7 @@ ERZÄHLPERSPEKTIVEN-ANFORDERUNGEN:
 - POV-FILTERUNG: Alle Beschreibungen müssen durch die Perspektive, das Wissen und den emotionalen Zustand der POV-Figur gefiltert werden.
 - SZENENERÖFFNUNG: Etabliere die POV-Figur klar innerhalb des ersten Absatzes jeder Szene.
 - BEGRENZTE ALLWISSENHEIT: Der Erzähler kann nur wissen, was die POV-Figur weiß, sieht, fühlt oder vernünftigerweise ableitet.
+- SZENENANFÄNGE: Beginne in media res - kein szenisches Räuspern oder langwierige Einführungen.
 
 GENRE-SPEZIFISCHE SZENENKONSTRUKTION:
 - Jede Szene sollte {{ genre }}-Erwartungen erfüllen (nicht universelle "Konflikt"-Anforderungen)
